--- a/docs/index.css
+++ b/docs/index.css
@@ -196,5 +196,16 @@ footer .wrap {
     transform: rotate(-135deg);
     position: fixed;
     bottom: 3rem;
-    right: 3rem;
+    right: calc(((100% - var(--max-width)) / 2) - 3rem);
+}
+
+/*
+ * 用于计算 goto-top 按钮的位置始终保持在内容主体的右侧边上。
+ * 1024px 为 --max-width 的值，但是 CSS 并不支持直接在 @media
+ * 使用 var() 函数。
+ */
+@media (max-width: calc(1024px + 6rem)) {
+    .goto-top {
+        right: 3rem;
+    }
 }
