--- a/docs/v6/apidoc.css
+++ b/docs/v6/apidoc.css
@@ -238,8 +238,7 @@ main .api>summary {
     border-bottom: 1px solid var(--border-color);
     cursor: pointer;
     line-height: 1;
-    display: flex;
-    justify-content: space-between;
+    box-sizing: border-box;
 }
 
 
@@ -247,21 +246,39 @@ main details.api:not([open])>summary {
     border: none;
 }
 
-main .api>summary .action,
-main .api>summary .srv,
-main .api>summary .summary {
-    width: 33%;
+
+main .api>summary .action {
+    width: 40%;
+    display: inline-block;
+}
+
+main .api>summary .right {
+    width: calc(60% - 2rem); /* 2rem 表示左侧的箭头 */
+    float: right;
+}
+
+main .api>summary .right .srv,
+main .api>summary .right .summary {
+    width: 50%;
     display: inline-block;
 }
 
 /* 200px 为 --min-width 的值 */
 @media (max-width: calc(200px * 2)) {
-    main .api>summary .action,
-    main .api>summary .summary {
+    main .api>summary .action {
         width: 50%;
     }
-    main .api>summary .srv {
+
+    main .api>summary .right {
+        width: calc(50% - 2rem);
+    }
+
+    main .api>summary .right .srv {
         display: none;
+    }
+
+    main .api>summary .right .summary {
+        width: 100%;
     }
 }
 
@@ -290,61 +307,63 @@ main .api .description {
     border-bottom: 1px solid var(--border-color);
 }
 
-main .api[data-method='GET,'][open],
-main .api[data-method='GET,']:hover,
-main .callback[data-method='GET,'] h3 {
+main .api[data-method='GET'][open],
+main .api[data-method='GET']:hover,
+main .callback[data-method='GET'] h3 {
     border: 1px solid var(--method-get-color);
 }
-main .api[data-method='GET,']>summary {
+main .api[data-method='GET']>summary {
     border-bottom: 1px solid var(--method-get-color);
 }
 
-main .api[data-method='POST,'][open],
-main .api[data-method='POST,']:hover,
-main .callback[data-method='POST,'] h3 {
+main .api[data-method='POST'][open],
+main .api[data-method='POST']:hover,
+main .callback[data-method='POST'] h3 {
     border: 1px solid var(--method-post-color);
 }
-main .api[data-method='POST,']>summary {
+main .api[data-method='POST']>summary {
     border-bottom: 1px solid var(--method-post-color);
 }
 
-main .api[data-method='PUT,'][open],
-main .api[data-method='PUT,']:hover,
-main .callback[data-method='PUT,'] h3 {
+main .api[data-method='PUT'][open],
+main .api[data-method='PUT']:hover,
+main .callback[data-method='PUT'] h3 {
     border: 1px solid var(--method-put-color);
 }
-main .api[data-method='PUT,']>summary {
+main .api[data-method='PUT']>summary {
     border-bottom: 1px solid var(--method-put-color);
 }
 
-main .api[data-method='PATCH,'][open],
-main .api[data-method='PATCH,']:hover,
-main .callback[data-method='PATCH,'] h3 {
+main .api[data-method='PATCH'][open],
+main .api[data-method='PATCH']:hover,
+main .callback[data-method='PATCH'] h3 {
     border: 1px solid var(--method-patch-color);
 }
-main .api[data-method='PATCH,']>summary {
+main .api[data-method='PATCH']>summary {
     border-bottom: 1px solid var(--method-patch-color);
 }
 
-main .api[data-method='DELETE,'][open],
-main .api[data-method='DELETE,']:hover,
-main .callback[data-method='DELETE,'] h3 {
+main .api[data-method='DELETE'][open],
+main .api[data-method='DELETE']:hover,
+main .callback[data-method='DELETE'] h3 {
     border: 1px solid var(--method-delete-color);
 }
-main .api[data-method='DELETE,']>summary {
+main .api[data-method='DELETE']>summary {
     border-bottom: 1px solid var(--method-delete-color);
 }
 
-main .api[data-method='OPTIONS,'][open],
-main .api[data-method='OPTIONS,']:hover,
-main .callback[data-method='OPTIONS,'] h3 {
+main .api[data-method='OPTIONS'][open],
+main .api[data-method='OPTIONS']:hover,
+main .callback[data-method='OPTIONS'] h3 {
     border: 1px solid var(--method-options-color);
 }
-main .api[data-method='OPTIONS,']>summary {
+main .api[data-method='OPTIONS']>summary {
     border-bottom: 1px solid var(--method-options-color);
 }
 
 main .callback h3 {
+    display: flex;
+    justify-content: space-between;
     padding: var(--article-padding) var(--padding);
     margin: 0;
     border-left: none !important;
